--- a/vuttr-web/package.json
+++ b/vuttr-web/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "swr": "^0.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
